--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.6.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
