--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,23 @@
-server {
-    listen 80;
-    server_name localhost;
+pid /tmp/nginx.pid;
 
-    root /usr/share/nginx/html;
-    index index.html;
+events {}
 
-    location /health {
-        access_log off;
-        return 200 "OK";
-        add_header Content-Type text/plain;
-    }
+http {
+    server {
+        listen 8080;
+        server_name localhost;
 
-    location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location /health {
+            access_log off;
+            return 200 "OK";
+            add_header Content-Type text/plain;
+        }
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
 }
